if ENNA_BUILD_THEME
if BUILD_THEME_STB

MAINTAINERCLEANFILES = Makefile.in

EDJE_CC = edje_cc

EDJE_FLAGS = \
-id $(top_srcdir)/data/theme/stb/images -id $(top_srcdir)/data/theme/stb/gadgets/date/images -id $(top_srcdir)/data/theme/stb/images/icons -id $(top_srcdir)/data/theme/stb/elm \
-fd $(top_srcdir)/data/theme/stb/fonts

stbdir = $(pkgdatadir)/theme

stb_DATA = stb.edj


FONTS = \
fonts/Comfortaa_Thin.ttf \
fonts/Comfortaa_Bold.ttf \
fonts/Comfortaa_Regular.ttf

EDC = \
elm/elm.edc \
elm/video.edc \
gad_date.edc \
gad_weather.edc \
icons.edc \
stb.edc \
player.edc

IMGS = \
images/bg.png \
images/bg_tile.png \
images/icons/directory.png \
images/icons/favorite.png \
images/icons/friends.png \
images/icons/harddisk.png \
images/menu_bg.png \
images/icons/music_library.png \
images/icons/played.png \
images/icons/playlist.png \
images/icons/spotify.png \
images/arrow_right.png \
images/background.png \
images/browser_bg.png \
images/cover_reflect.png \
images/cover_shadow.png \
images/icon_search.png \
images/loading_bg.png \
images/loading_top.png \
images/player_osd.png \
images/player_pause.png \
images/player_play.png \
images/player_slider_bg.png \
images/player_slider_inside.png \
images/player_slider_knob.png \
images/player_slider_out.png \
images/player_slider_time.png \
images/scrollbar_horizontal.png \
images/scrollbar_vertical.png \
images/search_bg.png \
images/sel_bg.png


ELM_IMG = \
elm/bt_dis_base.png \
elm/bt_sm_base2.png \
elm/bt_sm_hilight.png \
elm/bt_sm_shine.png \
elm/cur_box.png \
elm/cur_glow.png \
elm/cur_hi.png \
elm/cur_shine.png \
elm/inwin_bg.png \
elm/progressbar_bg.png \
elm/sb_runnerh.png \
elm/sb_runnerv.png \
elm/shad_circ.png \
elm/cur_shad.png

IMG_MOVIE_FLAGS = \
images/icons/flags/audio/dd20.png \
images/icons/flags/audio/dd51.png \
images/icons/flags/audio/dd71.png \
images/icons/flags/audio/dts51.png \
images/icons/flags/audio/dts71.png \
images/icons/flags/audio/mono.png \
images/icons/flags/audio/defaultsound.png \
images/icons/flags/media/bluray.png \
images/icons/flags/media/divx.png \
images/icons/flags/media/dvd.png \
images/icons/flags/media/hdtv.png \
images/icons/flags/media/defaultsource.png \
images/icons/flags/studio/20thcenturyfox.png \
images/icons/flags/studio/artisan.png \
images/icons/flags/studio/carolco.png \
images/icons/flags/studio/castlerock.png \
images/icons/flags/studio/columbia.png \
images/icons/flags/studio/default.png \
images/icons/flags/studio/dimension.png \
images/icons/flags/studio/disney.png \
images/icons/flags/studio/dreamworks.png \
images/icons/flags/studio/filmfour.png \
images/icons/flags/studio/gaumont.png \
images/icons/flags/studio/hollywood.png \
images/icons/flags/studio/lionsgate.png \
images/icons/flags/studio/lucasfilm.png \
images/icons/flags/studio/mgm.png \
images/icons/flags/studio/miramax.png \
images/icons/flags/studio/newlinecinema.png \
images/icons/flags/studio/paramount.png \
images/icons/flags/studio/revolution.png \
images/icons/flags/studio/screengems.png \
images/icons/flags/studio/sonypictures.png \
images/icons/flags/studio/studiocanal.png \
images/icons/flags/studio/touchstone.png \
images/icons/flags/studio/tristar.png \
images/icons/flags/studio/unitedartists.png \
images/icons/flags/studio/universal.png \
images/icons/flags/studio/warner.png \
images/icons/flags/network/abc.png \
images/icons/flags/network/bbc.png \
images/icons/flags/network/cartoon_network.png \
images/icons/flags/network/cbs.png \
images/icons/flags/network/channel4.png \
images/icons/flags/network/citytv.png \
images/icons/flags/network/comedy_central.png \
images/icons/flags/network/fox.png \
images/icons/flags/network/hbo.png \
images/icons/flags/network/lifetime.png \
images/icons/flags/network/living.png \
images/icons/flags/network/nbc.png \
images/icons/flags/network/showtime.png \
images/icons/flags/video/1080i.png \
images/icons/flags/video/1080p.png \
images/icons/flags/video/720i.png \
images/icons/flags/video/720p.png \
images/icons/flags/video/576i.png \
images/icons/flags/video/576p.png \
images/icons/flags/video/540i.png \
images/icons/flags/video/540p.png \
images/icons/flags/video/480i.png \
images/icons/flags/video/480p.png \
images/icons/flags/video/defaultscreen.png \
images/icons/flags/video/sd.png

IMG_ICONS = \
images/icons/icon_config.png \
images/icon_games.png \
images/icons/icon_music.png \
images/icons/icon_photo.png \
images/icons/icon_video.png \
images/icons/icon_weather.png \
images/icons/arrow_left.png \
images/icons/arrow_right.png \
images/icons/directory_512.png \
images/icons/directory_256.png \
images/icons/directory_128.png \
images/icons/directory_64.png \
images/icons/directory_32.png \
images/icons/directory_16.png \
images/icons/dvd_512.png \
images/icons/dvd_256.png \
images/icons/dvd_128.png \
images/icons/dvd_64.png \
images/icons/dvd_32.png \
images/icons/dvd_16.png \
images/icons/home_512.png \
images/icons/home_256.png \
images/icons/home_128.png \
images/icons/home_64.png \
images/icons/home_32.png \
images/icons/home_16.png \
images/icons/dvd_512.png \
images/icons/dvd_256.png \
images/icons/dvd_128.png \
images/icons/dvd_64.png \
images/icons/dvd_32.png \
images/icons/dvd_16.png \
images/icons/harddisk_512.png \
images/icons/harddisk_256.png \
images/icons/harddisk_128.png \
images/icons/harddisk_64.png \
images/icons/harddisk_32.png \
images/icons/harddisk_16.png \
images/icons/network_directory_512.png \
images/icons/network_directory_256.png \
images/icons/network_directory_128.png \
images/icons/network_directory_64.png \
images/icons/network_directory_32.png \
images/icons/network_directory_16.png

IMG_MEDIACONTROLS = \
images/icons/mp_forward.png \
images/icons/mp_info.png \
images/icons/mp_next.png \
images/icons/mp_pause.png \
images/icons/mp_play.png \
images/icons/mp_prev.png \
images/icons/mp_rewind.png \
images/icons/mp_stop.png

IMG_WEATHER_ICONS = \
images/icons/weather_cloudy.png \
images/icons/weather_foggy.png \
images/icons/weather_heavy_rain.png \
images/icons/weather_ice.png \
images/icons/weather_light_snow.png \
images/icons/weather_rain.png \
images/icons/weather_rain_storm.png \
images/icons/weather_showers.png \
images/icons/weather_snow.png \
images/icons/weather_sun_clouds.png \
images/icons/weather_sun_light_clouds.png \
images/icons/weather_sun_mostly_cloudy.png \
images/icons/weather_sunny.png \
images/icons/weather_sun_rain.png \
images/icons/weather_sun_snow.png \
images/icons/weather_sun_storm.png \
images/icons/weather_windy.png




EXTRA_DIST = \
	$(FONTS) \
	$(EDC) \
	$(IMGS) \
	$(IMG_ICONS) \
	$(ELM_IMG) \
	$(IMG_MOVIE_FLAGS) \
	$(IMG_MEDIACONTROLS) \
	$(IMG_WEATHER_ICONS)

stb.edj: Makefile $(EXTRA_DIST)
	$(AM_V_GEN)$(EDJE_CC) $(EDJE_FLAGS) \
	$(top_srcdir)/data/theme/stb/stb.edc \
	$(top_builddir)/data/theme/stb/stb.edj

clean-local:
	rm -f *.edj
endif
endif

